cmake_minimum_required(VERSION 3.1)
project(edu)

add_executable(sequences individual_assignments/sequences.cpp)
add_executable(series_sum individual_assignments/series_sum.cpp)
add_executable(arrays individual_assignments/arrays.cpp)
add_executable(structs individual_assignments/structs.cpp)
add_executable(single_linked_list individual_assignments/single_linked_list.cpp)
add_executable(double_linked_list individual_assignments/double_linked_list.cpp)

add_executable(sandbox sandbox.cpp)
